--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "ownerNumber": ["083814160711@s.whatsapp.net","0@s.whatsapp.net"],
+    "ownerNumber": ["6283814160711@s.whatsapp.net","62838141607117@s.whatsapp.net"],
     "ownerName": "L",
     "instagram" : "https://instagram.com/menggsmail",
     "botName": "Prili²-Mdོ ",
